syntax = "proto3";
package proto;
option go_package = "../pb";

import "proto/common.proto";

service DependenciesService {
  rpc GetDependencies(ServiceInput) returns (ServiceOutputStringMap);
}

